js/js.translator/testData/incremental/invalidation/interfaceOpenMethodsInOpenClass/lib2/GetA.kt
fun getObjectA() : A<Int> {
    return myObject
}
